Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.8
* Use same __str__ as trytond instances

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Support dot notation on PYSON Eval
* Add __slots__

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.4

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.7
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Always use the context and config of the instance
* Add support for search_* attributes in ModelList

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Add set_sequence method to ModelList
* Add __int__ to Model
* Allow to use keyword arguments with trytond configuration

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Fill default Report data

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Add Python3 support

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Add StateAction support to Wizard

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Add support for PyPy
* Allow to provide extra keyword arguments to set_xmlrpc()
* Add support of fields.TimeDelta
* Remove password on set_trytond
* Manage reload, save, delete, duplicate and click as class and instance method

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)
* New configuration syntax
* Add Report
* Explicitly set value of parent field
* Add duplicate method

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)
* Models cache depends also on user
* Drop support of Python 2.6
* Allow to pass field values to new method
* Add click method for buttons

Version 3.0.0 - 2013-10-21