@@ -1,3 +1,5 @@
+* Support PYSON comparison of date and datetime
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Add support for Python 3.8
